--- a/css/main.scss
+++ b/css/main.scss
@@ -426,151 +426,7 @@ section {
   }
 }
 
-.gym-button:link,
-.gym-button:visited {
-  color: $gym-white;
-  font-family: $gym-font-stack;
-}
-
-body {
-  input[type="submit"]:active:not(:disabled),
-  input[type="submit"]:focus:not(:disabled),
-  input[type="button"]:active:not(:disabled),
-  input[type="button"]:focus:not(:disabled),
-  button:active:not(:disabled),
-  button:focus:not(:disabled),
-  .button:active:not(:disabled),
-  .button:focus:not(:disabled) .gym-button:focus {
-    box-shadow: none;
-  }
-}
-
-.gym-button,
-a.gym-button,
-a.gym-button:link,
-div.problem .save,
-div.problem .save:not(:disabled) {
-  box-shadow: none;
-  text-shadow: none;
-  background-image: none;
-
-  display: inline-block;
-  width: 100%;
-
-  padding: 1em;
-  margin: auto;
-  text-align: center;
-  cursor: pointer;
-
-  border: 0;
-  border-radius: 0.125em;
-
-  background-color: $gym-orange;
-  color: $gym-white;
-  font-weight: bold;
-  font-size: 1em;
-  text-align: center;
-  font: bold 1.2em/1 $gym-font-stack;
-
-  a,
-  a:link,
-  a:visited,
-  a b {
-    color: $gym-white;
-    font: bold 1.2em/1 $gym-font-stack;
-  }
-  a:hover {
-    text-decoration: none;
-  }
-
-  b {
-    font: bold 1.2em/1 $gym-font-stack;
-    letter-spacing: 0.025em;
-    color: $gym-white;
-  }
-}
-
-body {
-  button[type="submit"],
-  button[type="submit"]:hover,
-  #secondary-nav a.gym-button:hover,
-  .gym-button:hover,
-  .gym-button:active,
-  .gym-button:active:hover,
-  a.gym-button:hover,
-  a.gym-button:hover,
-  a.gym-button:active,
-  a.gym-button:active:hover,
-  a:visited.gym-button:hover,
-  a:link.gym-button:hover,
-  a:link:visited.gym-button:hover,
-  input[type="submit"]:hover:not(:disabled),
-  input[type="button"]:hover:not(:disabled),
-  button:hover:not(:disabled),
-  button:hover:not(:disabled),
-  .account-settings-sections
-    .section
-    .account-settings-section-body
-    .u-field
-    .field
-    .u-field-link:hover,
-  .xmodule_display.xmodule_CapaModule div.problem .action .save:hover,
-  .xmodule_display.xmodule_CapaModule
-    div.problem
-    .action
-    .save:hover:not(:disabled),
-  .courseware-bookmarks-button .bookmarks-list-button:hover {
-    background-color: $gym-button-background-hover;
-    color: $gym-white;
-    background-image: none;
-    box-shadow: none;
-    text-decoration: none;
-    font-weight: bold;
-    border: none;
-    color: $gym-white;
-    font-family: $gym-font-stack;
-
-    a,
-    a:link,
-    a:link:hover,
-    a:link:visited,
-    a:link:visited:hover {
-      text-decoration: none;
-      color: $gym-white;
-
-      b {
-        color: $gym-white;
-      }
-    }
-  }
-
-  .courseware-bookmarks-button {
-    .bookmarks-list-button {
-      padding-top: 0.5em;
-      padding-bottom: 0.5em;
-    }
-  }
-
-  .xmodule_display.xmodule_CapaModule div.problem .action .save:not(:disabled) {
-    width: auto;
-  }
-}
-
-.gym-button:focus,
-.gym-button:active {
-  text-decoration: none !important;
-  background: $gym-button-background-active;
-}
-
-.gym-button b {
-  font: bold 1.2em/1 $gym-font-stack;
-  letter-spacing: 0.025em;
-  vertical-align: bottom;
-}
-
-.gym-button.natural {
-  width: auto;
-}
+@import "components/buttons";
 
 .gym-link {
   color: #f89820;
