--- a/_sass/pages/_logistration.scss
+++ b/_sass/pages/_logistration.scss
@@ -49,7 +49,7 @@
   padding: 20px 0;
 }
 
-.logistration-button {
+button.logistration-button {
   font-size: 1.5em;
   text-transform: capitalize;
 }
