better mobile layout

--- a/_sass/pages/_account-settings.scss
+++ b/_sass/pages/_account-settings.scss
@@ -8,7 +8,6 @@
   .wrapper-header { display: none; }
 }
 
-
 .account-settings-sections {
 
   .field {
@@ -43,10 +42,14 @@
   .u-field-message {
     position: relative;
     padding: 15px 0 0 80px;
-    width: 60%;
+    width: 100%;
     display: inline-block;
     vertical-align: top;
     color: #919191;
+
+    @include breakpoint(medium, min) {
+      width: 60%;
+    }
   }
 
   // Since we only support English, there's no point in showing the language dropdown (with only one option)
