--- a/_sass/components/_forms.scss
+++ b/_sass/components/_forms.scss
@@ -22,7 +22,7 @@ select {
   cursor: pointer;
 }
 
-label {
+label, .field-label {
   font-size: 1.1em;
   text-transform: uppercase;
   font-family: $gym-font-stack;
