--- a/_sass/pages/_courseware.scss
+++ b/_sass/pages/_courseware.scss
@@ -78,7 +78,7 @@
 .course-tabs {
   padding: 0;
   font-weight: normal;
-  margin-left: 0;
+  margin: 0;
 
   .tab {
     display: inline-block;
@@ -86,7 +86,7 @@
   }
 
   a {
-    padding: 10px 15px 13px 0;
+    padding: 10px 15px 0 0;
     border-bottom: none;
     color: currentColor;
     display: block;
