--- a/_sass/pages/_courseware.scss
+++ b/_sass/pages/_courseware.scss
@@ -586,3 +586,98 @@
     }
   }
 }
+
+// Syllabus/Course Info
+section.updates {
+  line-height: 1.41575em;
+  font-size: 1.6rem;
+
+  h1 {
+    font-size: 36px;
+    font-weight: 900;
+  }
+
+  section {
+    margin-bottom: 0;
+  }
+
+  ol,
+  ul {
+    padding-left: 0;
+  }
+
+  ul ul {
+    list-style: circle;
+    padding-left: 2.1em;
+    margin-left: -0.96em;
+  }
+
+  li {
+    margin-top: 0.8em;
+  }
+
+  header.hero p {
+    font-family: $gym-font-stack;
+    font-size: 1.6em;
+    line-height: 1.5;
+    letter-spacing: 0.01em;
+    word-spacing: 0.02em;
+  }
+
+  article {
+    border-bottom: none;
+    margin-bottom: 0;
+
+    section {
+      border-top: 1px solid #ddd;
+      margin-top: 1.8em;
+
+      h2 {
+        font: 900 1em/1.3 $gym-font-stack;
+        color: #222;
+        letter-spacing: 0.06em;
+        word-spacing: 0.04em;
+        text-transform: uppercase;
+        margin-bottom: 1em;
+      }
+
+      h3 {
+        font: bold 1.2em/1.4 $gym-font-stack;
+        color: #222;
+        letter-spacing: 0.02em;
+        word-spacing: 0.04em;
+        margin-top: 1em;
+        text-transform: capitalize;
+      }
+    }
+  }
+}
+
+section.handouts {
+  font-size: 12pt;
+  border-radius: 0;
+  padding: 0px 20px;
+  border-left: none;
+  background-color: #fff;
+
+  a {
+    color: #f89820;
+    display: inline;
+
+    &:hover {
+      text-decoration: none;
+      border-bottom: 1px solid #f89820;
+    }
+  }
+
+  h1 {
+    padding: 10px 0 0px 0;
+    font-family: $gym-font-stack;
+    font-weight: 600;
+  }
+
+  dt {
+    font-family: $gym-font-stack;
+    font-weight: 600;
+  }
+}
