--- a/_sass/pages/_courseware.scss
+++ b/_sass/pages/_courseware.scss
@@ -264,35 +264,41 @@
 }
 
 // Course Wrapper
-.course-wrapper main {
-  padding: 20px;
-
-  .hd-1,
-  .hd-2,
-  .hd-3,
-  .hd-4,
-  .hd-5,
-  .hd-6,
-  .hd-7,
-  .hd-8 {
-    margin: 0;
-    font-weight: 400;
-    font-size: inherit;
-    line-height: inherit;
-    color: #474747;
-  }
-
-  .hd-3 {
-    margin-bottom: 10px;
-  }
-
-  h2 {
-    font-weight: 600;
-    text-transform: initial;
-    font-size: 1.5em;
-    line-height: 1.4em;
+.course-wrapper {
+  margin-top: 20px;
+  
+  main {
+    padding: 20px;
+  
+    .hd-1,
+    .hd-2,
+    .hd-3,
+    .hd-4,
+    .hd-5,
+    .hd-6,
+    .hd-7,
+    .hd-8 {
+      margin: 0;
+      font-weight: 400;
+      font-size: inherit;
+      line-height: inherit;
+      color: #474747;
+    }
+  
+    .hd-3 {
+      margin-bottom: 10px;
+    }
+  
+    h2 {
+      font-weight: 600;
+      text-transform: initial;
+      font-size: 1.5em;
+      line-height: 1.4em;
+    }
   }
 }
+
+
 
 .wrap-instructor-info .instructor-info-action {
   float: right;
