--- a/css/main.scss
+++ b/css/main.scss
@@ -75,7 +75,7 @@ body {
 
 @import "components/forms";
 
-@import "components/bootstrap/layout";
+// @import "components/bootstrap/layout";
 
 
 /* --- BEGIN: Migrated from gymnasium.scss in the open edx theme --- */
