--- a/_sass/components/bootstrap/_layout.scss
+++ b/_sass/components/bootstrap/_layout.scss
@@ -7,20 +7,20 @@
   margin-right: auto;
   margin-left: auto;
   min-width: 0;
+  width: auto;
 }
 @media (min-width: 768px) {
   .container {
-    width: 750px;
+    max-width: 750px;
   }
 }
 @media (min-width: 992px) {
   .container {
-    width: 970px;
+    max-width: 970px;
   }
 }
 @media (min-width: 1200px) {
   .container {
-    width: auto;
     max-width: 1180px;
   }
 }
