--- a/_sass/pages/_courseware.scss
+++ b/_sass/pages/_courseware.scss
@@ -341,6 +341,7 @@
     // exam submit buttons
     .action {
       margin-top: 20px;
+      margin-bottom: 20px;
       min-height: 20px;
       width: 100%;
       display: flex;
@@ -349,29 +350,33 @@
       flex-direction: row;
       align-items: center;
       flex-wrap: wrap;
+    }
 
-      .submit-attempt-container {
+    .submit-attempt-container {
+        
+      flex-grow: 1;
+
+      @include breakpoint(medium, max) {
         padding-bottom: 20px;
-        flex-grow: 1;
       }
+    }
 
-      .submission-feedback {
-        margin-right: 10px;
-        margin-top: 10px;
-        display: inline-block;
-        color: #5e5e5e;
-        font-size: 0.9em;
-        -webkit-font-smoothing: antialiased;
-        vertical-align: middle;
-      }
+    .submission-feedback {
+      margin-right: 10px;
+      margin-top: 10px;
+      display: inline-block;
+      color: #5e5e5e;
+      font-size: 0.9em;
+      -webkit-font-smoothing: antialiased;
+      vertical-align: middle;
+    }
 
-      .problem-action-button-wrapper {
-        border-right: 1px solid #f2f2f2;
-        display: inline-block;
+    .problem-action-button-wrapper {
+      border-right: 1px solid #f2f2f2;
+      display: inline-block;
 
-        &:last-child {
-          border: none;
-        }
+      &:last-child {
+        border: none;
       }
     }
 
