--- a/_sass/pages/_courseware.scss
+++ b/_sass/pages/_courseware.scss
@@ -108,7 +108,7 @@
     b {
       text-transform: uppercase;
       letter-spacing: 0.05em;
-      border-bottom: 1px dashed transparent;
+      border-bottom: 1px solid currentColor;
       vertical-align: -0.15em;
       font-size: 1.2em;
     }
