--- a/_sass/components/_forms.scss
+++ b/_sass/components/_forms.scss
@@ -63,6 +63,10 @@ input+.tip-input {
   margin-top: 0.6em;
 }
 
+button {
+  border: 0;
+}
+
 // Disabled button styles
 input[type="submit"]:disabled, input[type="submit"].is-disabled, input[type="submit"].disabled, input[type="button"]:disabled, input[type="button"].is-disabled, input[type="button"].disabled, button:disabled, button.is-disabled, button.disabled, .button:disabled, .button.is-disabled, .button.disabled {
   pointer-events: none;
