--- a/_sass/pages/_courseware.scss
+++ b/_sass/pages/_courseware.scss
@@ -92,14 +92,13 @@
     // }
 
     &.active,
-    &:focus,
+    &:active,
     &:focus,
     &:hover {
       color: currentColor;
       background: none;
       text-decoration: none;
       border: 0;
-      font-family: inherit;
 
       b {
         color: currentColor;
