--- a/_sass/components/bootstrap/_forms.scss
+++ b/_sass/components/bootstrap/_forms.scss
@@ -1,3 +1,11 @@
+button,
+input,
+select,
+textarea {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
 fieldset {
   min-width: 0;
   padding: 0;
