--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -10,6 +10,7 @@ div.problem .save:not(:disabled) {
   box-shadow: none;
   text-shadow: none;
   background-image: none;
+  text-decoration: none;
 
   display: inline-block;
   width: 100%;
