--- a/_includes/partials/test-top.html
+++ b/_includes/partials/test-top.html
@@ -19,17 +19,17 @@
       href="{{site.gymurl}}/static/gymnasium/images/favicon.ico"
     />
 
-    <link
+    <!-- <link
       href="{{site.gymurl}}/static/gymnasium/css/lms-style-vendor.css"
       rel="stylesheet"
       type="text/css"
-    />
+    /> -->
 
-    <link
+    <!-- <link
       href="{{site.gymurl}}/static/gymnasium/css/lms-main-v1.css"
       rel="stylesheet"
       type="text/css"
-    />
+    /> -->
 
     <script
       type="text/javascript"
