--- a/_sass/pages/_courseware.scss
+++ b/_sass/pages/_courseware.scss
@@ -63,58 +63,59 @@
   padding: 0;
   font-weight: normal;
   margin: 0;
+  text-transform: uppercase;
 
   .tab {
     display: inline-block;
     list-style: none;
   }
 
-  a {
-    padding: 10px 0 0;
-    margin-right: 15px;
-    border: 0;
-    color: currentColor;
-    display: block;
-    line-height: 20.72px;
-    font-family: $gym-font-stack;
+  // a {
+  //   padding: 10px 0 0;
+  //   margin-right: 15px;
+  //   border: 0;
+  //   color: currentColor;
+  //   display: block;
+  //   line-height: 20.72px;
+  //   font-family: $gym-font-stack;
 
-    // &.active:focus:hover {
-    //   box-shadow: none;
-    //   text-shadow: none;
-    //   background: none;
-    //   border: none;
-    //   text-decoration: none;
+  //   // &.active:focus:hover {
+  //   //   box-shadow: none;
+  //   //   text-shadow: none;
+  //   //   background: none;
+  //   //   border: none;
+  //   //   text-decoration: none;
 
-    //   b {
-    //     color: currentColor;
-    //     border-bottom: 2px solid currentColor;
-    //   }
-    // }
+  //   //   b {
+  //   //     color: currentColor;
+  //   //     border-bottom: 2px solid currentColor;
+  //   //   }
+  //   // }
 
-    &.active,
-    &:active,
-    &:focus,
-    &:hover {
-      color: currentColor;
-      background: none;
-      text-decoration: none;
-      border: 0;
+  //   &.active,
+  //   &:active,
+  //   &:focus,
+  //   &:hover {
+  //     color: currentColor;
+  //     background: none;
+  //     text-decoration: none;
+  //     border: 0;
 
-      b {
-        color: currentColor;
-        border-bottom: 2px solid currentColor;
-        text-decoration: none;
-      }
-    }
+  //     b {
+  //       color: currentColor;
+  //       border-bottom: 2px solid currentColor;
+  //       text-decoration: none;
+  //     }
+  //   }
 
-    b {
-      text-transform: uppercase;
-      letter-spacing: 0.05em;
-      border-bottom: 1px solid currentColor;
-      vertical-align: -0.15em;
-      font-size: 1.2em;
-    }
-  }
+  //   b {
+  //     text-transform: uppercase;
+  //     letter-spacing: 0.05em;
+  //     border-bottom: 1px solid currentColor;
+  //     vertical-align: -0.15em;
+  //     font-size: 1.2em;
+  //   }
+  // }
 }
 
 // Course Accordion Nav
