--- a/css/jobs.scss
+++ b/css/jobs.scss
@@ -33,9 +33,11 @@
 
 .home .jobs-container {
   li {
-    border-bottom: font-calc(2) solid white;
-    margin-top: font-calc(8);
-    padding-bottom: font-calc(8);
+
+    a {
+      display: block;
+      padding: 1rem 0;
+    }
 
     .job-title {
       font-weight: bold;
