--- a/css/main.scss
+++ b/css/main.scss
@@ -48,30 +48,9 @@ body {
 @import "migrated-vendor";
 @import "migrated-main";
 
-// Screen reader support {
-.sr,
-.sr-only {
-  background: #fff;
-  color: #000;
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  border: 0;
 
-  &-focusable:active,
-  &-focusable:focus {
-    position: static;
-    width: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    clip: auto;
-  }
-}
+@import "components/visibility";
+
 
 @import "components/forms";
 
