--- a/_sass/components/_links_buttons.scss
+++ b/_sass/components/_links_buttons.scss
@@ -191,3 +191,8 @@ button:focus:not(:disabled),
 .button:focus:not(:disabled) .gym-button:focus {
   box-shadow: none;
 }
+
+
+button {
+  cursor: pointer;
+}
