--- a/_sass/pages/_courseware.scss
+++ b/_sass/pages/_courseware.scss
@@ -63,7 +63,7 @@
   padding: 0;
   font-weight: normal;
   margin: 0;
-  text-transform: uppercase;
+  
 
   .tab {
     display: inline-block;
@@ -74,11 +74,12 @@
   a {
     padding: 10px 0 0;
     margin-right: 15px;
-    // border: 0;
+    text-transform: uppercase;
     color: currentColor;
     display: block;
     line-height: 20.72px;
     font-family: $gym-font-stack;
+    font-size: 1.2em;
 
     // &.active:focus:hover {
     //   box-shadow: none;
